# jsonrpc-server

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml
front/: README.md  elm.json
front/src/: Color.elm  Login.elm  Main.elm  Register.elm
migrations/2021-02-20-021348_create_user/: down.sql  up.sql
src/: config.rs  database.rs  jwt.rs  main.rs  server.rs
src/handler/: mod.rs  user.rs
src/middleware/: mod.rs  rpc_auth.rs
src/models/: user.rs
static/: index.html
