[package]
name = "jsonrpc-server"
version = "0.1.0"
authors = ["李文军"]
edition = "2018"

[dependencies]
actix-cors = "0.5"
actix-files = "0.5"
actix-http = "2"
actix-service = "1"
actix-web = "3"
bcrypt = "0.9"
chrono = "0.4"
diesel = { version = "1.4", features = ["chrono", "serde_json", "postgres", "r2d2"] }
diesel_migrations = "1.4"
dotenv = "0.15"
env_logger = "0.8"
envy = "0.4"
erased-serde = "0.3"
futures = "0.3"
jsonrpc-v2 = "0.10"
jsonwebtoken = "7"
lazy_static = "1.4"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
